refactor: replace book -> movie
