# app/controller/movie.go
@@ -12,21 +12,21 @@ import (
 	"github.com/google/uuid"
 )
 
-// GetBooks func gets all books.
-// @Description Get all books.
-// @Summary get all books
-// @Tags Book
+// GetMovies func gets all movies.
+// @Description Get all movies.
+// @Summary get all movies
+// @Tags Movie
 // @Accept json
 // @Produce json
 // @Param offset query integer false "offset"
 // @Param limit query integer false "limit"
-// @Success 200 {object} schema.BookListResponse
+// @Success 200 {object} schema.MovieListResponse
 // @Failure 400 {object} schema.ErrorResponse "Error"
-// @Router /api/v1/books [get]
-func GetBooks(c *fiber.Ctx) error {
+// @Router /api/v1/movies [get]
+func GetMovies(c *fiber.Ctx) error {
 	pagination := GetPagination(c)
-	objs, count, err := ListObjs[schema.Book](
-		db.Model(model.Book{}), pagination,
+	objs, count, err := ListObjs[schema.Movie](
+		db.Model(model.Movie{}), pagination,
 	)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -41,45 +41,45 @@ func GetBooks(c *fiber.Ctx) error {
 	})
 }
 
-// GetBook func gets a book.
-// @Description a book.
-// @Summary get a book
-// @Tags Book
+// GetMovie func gets a movie.
+// @Description a movie.
+// @Summary get a movie
+// @Tags Movie
 // @Accept json
 // @Produce json
-// @Param id path string true "Book ID"
-// @Success 200 {object} schema.Book
+// @Param id path string true "Movie ID"
+// @Success 200 {object} schema.Movie
 // @Failure 400,404 {object} schema.ErrorResponse "Error"
-// @Router /api/v1/books/{id} [get]
-func GetBook(c *fiber.Ctx) error {
+// @Router /api/v1/movies/{id} [get]
+func GetMovie(c *fiber.Ctx) error {
 	ID, err := uuid.Parse(c.Params("id"))
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
-	book := model.Book{ID: ID}
-	err = db.First(&book).Error
+	movie := model.Movie{ID: ID}
+	err = db.First(&movie).Error
 	if err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"msg": "book not found",
+			"msg": "movie not found",
 		})
 	}
-	return c.JSON(convert.To[schema.Book](book))
+	return c.JSON(convert.To[schema.Movie](movie))
 }
 
-// CreateBook func for creates a new book.
-// @Description Create a new book.
-// @Summary create a new book
-// @Tags Book
+// CreateMovie func for creates a new movie.
+// @Description Create a new movie.
+// @Summary create a new movie
+// @Tags Movie
 // @Accept json
 // @Produce json
-// @Param createbook body schema.CreateBook true "Create new book"
+// @Param createmovie body schema.CreateMovie true "Create new movie"
 // @Failure 400,401,500 {object} schema.ErrorResponse "Error"
-// @Success 200 {object} schema.Book "Ok"
+// @Success 200 {object} schema.Movie "Ok"
 // @Security ApiKeyAuth
-// @Router /api/v1/books [post]
-func CreateBook(c *fiber.Ctx) error {
+// @Router /api/v1/movies [post]
+func CreateMovie(c *fiber.Ctx) error {
 	user := c.Locals("user").(*jwt.Token)
 	claims := user.Claims.(jwt.MapClaims)
 	userID, ok := claims["user_id"]
@@ -89,29 +89,29 @@ func CreateBook(c *fiber.Ctx) error {
 		})
 	}
 
-	// Create new Book struct
-	createBook := &schema.CreateBook{}
-	if err := c.BodyParser(createBook); err != nil {
+	// Create new Movie struct
+	createMovie := &schema.CreateMovie{}
+	if err := c.BodyParser(createMovie); err != nil {
 		// Return 400 and error message.
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
-	logrus.Infof("create book: %+v", createBook)
+	logrus.Infof("create movie: %+v", createMovie)
 
 	var err error
-	createBook.UserID, err = uuid.Parse(userID.(string))
+	createMovie.UserID, err = uuid.Parse(userID.(string))
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
 
-	createBook.Status = 1 // Active
+	createMovie.Status = 1 // Active
 
-	// Create a new validator for a Book model.
+	// Create a new validator for a Movie model.
 	validate := validator.NewValidator()
-	if err := validate.Struct(createBook); err != nil {
+	if err := validate.Struct(createMovie); err != nil {
 		// Return, if some fields are not valid.
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg":    "invalid input found",
@@ -119,59 +119,59 @@ func CreateBook(c *fiber.Ctx) error {
 		})
 	}
 
-	newBook := model.Book{}
-	if err := convert.Update(&newBook, &createBook); err != nil {
+	newMovie := model.Movie{}
+	if err := convert.Update(&newMovie, &createMovie); err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
-	if err := db.Create(&newBook).Error; err != nil {
+	if err := db.Create(&newMovie).Error; err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
 
-	return c.JSON(convert.To[schema.Book](newBook))
+	return c.JSON(convert.To[schema.Movie](newMovie))
 }
 
-// UpdateBook func update a book.
-// @Description update book
-// @Summary update a book
-// @Tags Book
+// UpdateMovie func update a movie.
+// @Description update movie
+// @Summary update a movie
+// @Tags Movie
 // @Accept json
 // @Produce json
-// @Param id path string true "Book ID"
-// @Param updatebook body schema.Book true "Update a book"
-// @Success 200 {object} schema.Book
+// @Param id path string true "Movie ID"
+// @Param updatemovie body schema.Movie true "Update a movie"
+// @Success 200 {object} schema.Movie
 // @Failure 400,401,403,404,500 {object} schema.ErrorResponse "Error"
 // @Security ApiKeyAuth
-// @Router /api/v1/books/{id} [put]
-func UpdateBook(c *fiber.Ctx) error {
+// @Router /api/v1/movies/{id} [put]
+func UpdateMovie(c *fiber.Ctx) error {
 	ID, err := uuid.Parse(c.Params("id"))
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
-	book := model.Book{ID: ID}
-	err = db.First(&book).Error
+	movie := model.Movie{ID: ID}
+	err = db.First(&movie).Error
 	if err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"msg": "book not found",
+			"msg": "movie not found",
 		})
 	}
 
-	updateBook := &schema.UpdateBook{}
-	if err := c.BodyParser(updateBook); err != nil {
+	updateMovie := &schema.UpdateMovie{}
+	if err := c.BodyParser(updateMovie); err != nil {
 		// Return 400 and error message.
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
 
-	// Create a new validator for a Book model.
+	// Create a new validator for a Movie model.
 	validate := validator.NewValidator()
-	if err := validate.Struct(updateBook); err != nil {
+	if err := validate.Struct(updateMovie); err != nil {
 		// Return, if some fields are not valid.
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"msg":    "invalid input found",
@@ -179,32 +179,32 @@ func UpdateBook(c *fiber.Ctx) error {
 		})
 	}
 
-	if err := convert.Update(&book, &updateBook); err != nil {
+	if err := convert.Update(&movie, &updateMovie); err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
-	if err := db.Save(&book).Error; err != nil {
+	if err := db.Save(&movie).Error; err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"msg": err.Error(),
 		})
 	}
 
-	return c.JSON(convert.To[schema.Book](book))
+	return c.JSON(convert.To[schema.Movie](movie))
 }
 
-// DeleteBook func delete a book.
-// @Description delete book
-// @Summary delete a book
-// @Tags Book
+// DeleteMovie func delete a movie.
+// @Description delete movie
+// @Summary delete a movie
+// @Tags Movie
 // @Accept json
 // @Produce json
-// @Param id path string true "Book ID"
+// @Param id path string true "Movie ID"
 // @Success 200 {object} interface{} "Ok"
 // @Failure 401,403,404,500 {object} schema.ErrorResponse "Error"
 // @Security ApiKeyAuth
-// @Router /api/v1/books/{id} [delete]
-func DeleteBook(c *fiber.Ctx) error {
+// @Router /api/v1/movies/{id} [delete]
+func DeleteMovie(c *fiber.Ctx) error {
 	ID, err := uuid.Parse(c.Params("id"))
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -212,16 +212,16 @@ func DeleteBook(c *fiber.Ctx) error {
 		})
 	}
 
-	book := model.Book{ID: ID}
-	err = db.First(&book).Error
+	movie := model.Movie{ID: ID}
+	err = db.First(&movie).Error
 	if err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
 			"msg": "user not found",
 		})
 	}
 
-	book = model.Book{ID: ID}
-	result := db.Delete(&book)
+	movie = model.Movie{ID: ID}
+	result := db.Delete(&movie)
 	if result.Error != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
 			"msg": err.Error(),
