# app/model/movie.go
@@ -7,8 +7,8 @@ import (
 	"gorm.io/gorm"
 )
 
-// Book struct to describe book object.
-type Book struct {
+// Movie struct to describe movie object.
+type Movie struct {
 	ID        uuid.UUID `gorm:"primarykey;type:uuid;default:(uuid_generate_v4())"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
@@ -21,7 +21,7 @@ type Book struct {
 	Meta      Meta `gorm:"embedded"`
 }
 
-// Meta struct to describe book attributes.
+// Meta struct to describe movie attributes.
 type Meta struct {
 	Picture     string
 	Description string
