# app/schema/movie.go
@@ -6,8 +6,8 @@ import (
 	"github.com/google/uuid"
 )
 
-// Book struct to describe book object.
-type Book struct {
+// Movie struct to describe movie object.
+type Movie struct {
 	ID        uuid.UUID `json:"id"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
@@ -18,14 +18,14 @@ type Book struct {
 	Meta      Meta      `gorm:"embedded" json:"meta" validate:"required"`
 }
 
-// Meta struct to describe book attributes.
+// Meta struct to describe movie attributes.
 type Meta struct {
 	Picture     string `json:"picture"`
 	Description string `json:"description"`
 	Rating      int    `json:"rating" validate:"min=1,max=10"`
 }
 
-type CreateBook struct {
+type CreateMovie struct {
 	UserID uuid.UUID `json:"user_id" validate:"required"`
 	Title  string    `json:"title" validate:"required,lte=255"`
 	Author string    `json:"author" validate:"required,lte=255"`
@@ -33,11 +33,11 @@ type CreateBook struct {
 	Meta   Meta      `gorm:"embedded" json:"meta" validate:"required"`
 }
 
-type UpdateBook struct {
+type UpdateMovie struct {
 	Title  string `json:"title" validate:"required,lte=255"`
 	Author string `json:"author" validate:"required,lte=255"`
 	Status int    `json:"status" validate:"required,len=1"`
 	Meta   Meta   `gorm:"embedded" json:"meta" validate:"required"`
 }
 
-type BookListResponse = ListResponse[Book]
+type MovieListResponse = ListResponse[Movie]
